resources_csdp/cdp-default-git-source.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cdp-default-git-source
spec:
  ingressClassName: nginx
  rules:
  - host: lrcsdp.support.cf-cd.com
    http:
      paths:
      - backend:
          service:
            name: push-commit-eventsource-svc
            port:
              number: 80
        path: /webhooks/csdp/push-commit
        pathType: Prefix
